# legal-wise

./: .env.example  .gitignore  README.md  package-lock.json  project_rules.md  pyproject.toml  requirements.txt  start.sh  stop.sh
backend/: __init__.py  config.py  legal_tools.py  logger.py  main.py  pydantic_patch.py
backend/agents/: legal_agent.py
backend/tools/: legal_tools.py
backend/utils/: logger.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/consultation/: page.tsx
frontend/src/components/: QueryInterface.tsx  RightifyLogo.tsx  StreamingResponse.tsx  ThemeToggle.tsx
frontend/src/contexts/: ThemeContext.tsx
tests/: test_api.py
